--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,5 +1,7 @@
 {
     "app.header": "Welcome to Boca Code",
     "app.subhead": "Become a certified Software Engineer in 10 weeks",
-    "app.cta": "Apply Now"
+    "app.cta": "Apply Now",
+    "details.header": "Program Outline",
+    "details.text": "This course will teach you all of the hard and soft skills to have a successful career in tech."
 }
